8342936: Enhance java.io.IO with parameter-less println()