@@ -21,6 +21,7 @@
  * questions.
  */
 
+import java.io.Writer;
 import java.lang.reflect.Method;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -33,6 +34,7 @@ import jdk.test.lib.process.ProcessTools;
 import org.junit.jupiter.api.Assumptions;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Nested;
+import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.condition.EnabledOnOs;
 import org.junit.jupiter.api.condition.OS;
 import org.junit.jupiter.api.extension.AfterTestExecutionCallback;
@@ -48,7 +50,7 @@ import static org.junit.jupiter.api.Assertions.*;
 
 /*
  * @test
- * @bug 8305457
+ * @bug 8305457 8342936
  * @summary java.io.IO tests
  * @library /test/lib
  * @run junit IO
@@ -170,6 +172,33 @@ public class IO {
         assertFalse(out.isBlank());
         assertEquals(out.substring(0, out.length() / 2),
                 out.substring(out.length() / 2));
+    }
+
+    @Test //JDK-8342936
+    public void printlnNoParamsTest() throws Exception {
+        var file = Path.of("PrintlnNoParams.java");
+        try (Writer w = Files.newBufferedWriter(file)) {
+            w.write("""
+                    void main() {
+                        print("1 ");
+                        print("2 ");
+                        print("3 ");
+                        println();
+                        System.console().print("1 ");
+                        System.console().print("2 ");
+                        System.console().print("3 ");
+                        System.console().println();
+                    }
+                    """);
+        }
+        var pb = ProcessTools.createTestJavaProcessBuilder("--enable-preview", file.toString());
+        OutputAnalyzer output = ProcessTools.executeProcess(pb);
+        assertEquals(0, output.getExitValue());
+        assertTrue(output.getStderr().isEmpty());
+        output.reportDiagnosticSummary();
+        String out = output.getStdout();
+        String nl = System.getProperty("line.separator");
+        assertEquals("1 2 3 " + nl + "1 2 3 " + nl, out);
     }
 
 
